--- a/main_app/templates/finches/all_finches.html
+++ b/main_app/templates/finches/all_finches.html
@@ -5,12 +5,14 @@
 
 {% for finch in finches %}
   <div class="card">
+    <a href="{%url 'detail' finch.id%}">
     <div class="card-content">
       <span class="card-title">{{ finch.name }}</span>
       <p>Breed: {{ finch.breed }}</p>
       <p>Gender: {{ finch.gender }}</p>
       <p>Color: {{ finch.color }}</p>
     </div>
+    </a>
   </div>
 {% endfor %}
 
