--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -10,6 +10,10 @@
     <p>Gender: {{ finch.gender }}</p>
     <p>Color: {{ finch.color }}</p>
     </div>
+    <div class="card-action">
+      <a href="{% url 'finches_update' finch.id %}">Edit</a>
+      <a href="{% url 'finches_delete' finch.id %}">Delete</a>
+    </div>
 </div>
 
 {% endblock %}
