--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finch Collector</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
@@ -18,6 +20,8 @@
             </ul>
             <ul class="right">
               <li><a href="{%url 'about' %}">About</a></li>
+              <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+              <li><a href="{% url 'toys_index' %}">View All Toys</a></li>
               <li><a href="{% url 'finches_create' %}">Add a Finch</a></li>
               <li><a href="{%url 'all_finches' %}">View All Finches</a></li>
             </ul>
