--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -17,6 +17,17 @@
       <a href="{% url 'finches_delete' finch.id %}">Delete</a>
     </div>
 </div>
+{% for photo in finch.photo_set.all %}
+      <img class="responsive-img card-panel" src="{{photo.url}}">
+    {% empty %}
+      <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+    {% endfor %}
+    <form action="{% url 'add_photo' finch.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+      {% csrf_token %}
+      <input type="file" name="photo-file">
+      <br><br>
+      <button type="submit" class="btn">Upload Photo</button>
+  </form>
 </div>
 <!-- New Markup Below -->
 <div class="col s6">
@@ -26,6 +37,12 @@
     {{ feeding_form.as_p }}
     <input type="submit" class="btn" value="Add Feeding">
   </form>
+  <br>
+    {% if cat.fed_for_today %}
+      <div class="card-panel teal-text center-align">{{cat.name}} has been fed all meals for today</div>
+    {% else %}
+      <div class="card-panel red-text center-align">{{cat.name}} might be hungry</div>
+    {% endif %}
   <table class="striped">
     <thead>
       <tr><th>Date</th><th>Meal</th></tr>
@@ -40,8 +57,56 @@
     </tbody>
   </table>
 </div>
+<hr>
+  <div class="row">
+    <div class="col s6">
+      <h3>{{ finch.name }}'s Toys</h3>
+      {% if finch.toys.count %}
+        {% for toy in finch.toys.all %}
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">
+                A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+              </span>
+            </div>
+          </div>
+        {% endfor %}
+      {% else %}
+        <h5>No Toys 😿</h5>
+      {% endif %}
+    </div> 
 <!-- New Markup Above -->
+<div class="col s6">
+  <h3>Available Toys</h3>
+  {% if toys.count %}
+    {% for toy in toys.all %}
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">
+            A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+          </span>
+        </div>
+        <div class="card-action">
+          <form action="{% url 'assoc_toy' finch.id toy.id %}" method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn">Add</button>
+          </form>
+            <form action="{% url 'remove_toy' finch.id toy.id %}" method="POST">
+              {% csrf_token %}
+              <button type="submit" class="waves-effect waves-light btn-small">REMOVE
+                <i class="material-icons right">delete</i>
+              </button>
+            </form>
+          </div>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  {% else %}
+    <h5>{{finch.name}} Already Has All Toys Available</h5>
+  {% endif %}
 </div>
+
 <script>
 const dateEl = document.getElementById('id_date');
 // M is Materialize's global variable
